--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: network_ping
+name: network_util
 description: Handle network devices - made easy
-version: 0.1.0
+version: 0.1.1
 
 publish_to: 'none'
 
@@ -14,5 +14,5 @@ dependencies:
       url: https://github.com/Marc-R2/logger_dart.git
 
 dev_dependencies:
-  test: ^1.16.0
+  test: ^1.21.4
   very_good_analysis: 3.0.1
