--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,5 +14,6 @@ dependencies:
       url: https://github.com/Marc-R2/logger_dart.git
 
 dev_dependencies:
+  stream_channel: ^2.1.0
   test: ^1.21.4
   very_good_analysis: 3.0.1
