--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,9 @@ environment:
   sdk: '>=2.18.0-271.4.beta <3.0.0'
 
 dependencies:
+  # dart_ping: ^7.0.1
   http: any
-  logger:
+  log_message:
     git:
       url: https://github.com/Marc-R2/logger_dart.git
 
