--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ version: 0.1.1
 publish_to: 'none'
 
 environment:
-  sdk: '>=2.18.0-271.4.beta <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
   # dart_ping: ^7.0.1
@@ -16,5 +16,5 @@ dependencies:
 
 dev_dependencies:
   stream_channel: ^2.1.1
-  test: ^1.21.6
-  very_good_analysis: ^3.1.0
+  test: ^1.21.5
+  very_good_analysis: ^3.0.1
