--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,28 @@
 name: network_util
 description: Handle network devices - made easy
-version: 0.1.1
+version: 0.1.2
 
 publish_to: 'none'
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>=2.17.0 <4.0.0'
 
 dependencies:
-  # dart_ping: ^7.0.1
+  dart_ipify: ^1.1.1
   http: any
   log_message:
     git:
       url: https://github.com/Marc-R2/logger_dart.git
+  test_builder_annotation:
+    git:
+      url: https://github.com/Marc-R2/test_builder.git
+      path: packages/test_builder_annotation
 
 dev_dependencies:
   stream_channel: ^2.1.1
   test: ^1.21.5
+  test_builder:
+    git:
+      url: https://github.com/Marc-R2/test_builder.git
+      path: packages/test_builder
   very_good_analysis: ^3.0.1
